--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="col-12">
             <div class="col-12 nav">
-                 <a> <img src="images/QuicHealth logo.png"></a>
+                 <a> <img src="Images/QuicHealth logo.png"></a>
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About Us</a></li>
